package framework.piece;

import framework.piece.flyweight.SharedPiece;

public interface Piece {
    
    public SharedPiece getSharedPiece();

}
